Switch to q-fin papers

--- a/templates/discuss.html
+++ b/templates/discuss.html
@@ -234,13 +234,13 @@ $(document).ready(function(){
   </div>
 
   <!-- Site information/banner on top left -->
-	<a href="/">
-	<div id="tittxt">
-		<h1>Arxiv Sanity Preserver</h1>
-		Built in spare time by <a href="https://twitter.com/karpathy">@karpathy</a> to accelerate research.<br>
-		Serving last {{ totpapers }} papers from cs.[CV|CL|LG|AI|NE]/stat.ML
-	</div>
-	</a>
+  <a href="/">
+  <div id="tittxt">
+    <h1>Quant-Arxiv Sanity Preserver</h1>
+    Adapted in spare time by <a href="https://github.com/pepicello">@pepicello</a> from <a href="http://www.arxiv-sanity.com/">ASP</a> to accelerate research.<br>
+    Serving last {{ totpapers }} papers from q-fin.[PR|PM|TR|MF|CP|ST|GN]
+  </div>
+  </a>
 </div>
 
 <div id="flashesdiv">
