--- a/templates/account.html
+++ b/templates/account.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Arxiv Sanity Preserver</title>
+<title>Quant-Arxiv Sanity Preserver</title>
 
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
@@ -74,16 +74,7 @@
 <script src="{{ url_for('static', filename='as-common.js') }}"></script>
 
 <!-- Google Analytics JS -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-3698471-25', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<!-- Temp removed -->
 
 <script>
 var username = "{{ g.user.username }}";
@@ -212,8 +203,8 @@ $(document).ready(function(){
   <div>
     <h1>Friends</h1>
     <div id="ffdesc">
-      You can follow your friends on arxiv-sanity. This will populate the "friends"
-      tab of arxiv-sanity, which shows recent papers sorted by how popular they are
+      You can follow your friends on quant-arxiv-sanity. This will populate the "friends"
+      tab of quant-arxiv-sanity, which shows recent papers sorted by how popular they are
       with your friends. In the lists below, <span style="color:#090">green background</span> indicates an active connection,
       and <span style="color:#f00">red background</span> indicates a pending connection.
     </div>
