--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Arxiv Sanity Preserver</title>
+<title>Quant-Arxiv Sanity Preserver</title>
 
 <!-- MathJax -->
 <script type="text/x-mathjax-config">
@@ -25,16 +25,7 @@
 <script src="{{ url_for('static', filename='as-common.js') }}"></script>
 
 <!-- Google Analytics JS -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-3698471-25', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<!-- Temp removed -->
 
 <script>
 
@@ -164,7 +155,7 @@ $(document).ready(function(){
 </head>
 
 <body>
-<a href="https://github.com/karpathy/arxiv-sanity-preserver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+<a href="https://github.com/pepicello/quant-arxiv-sanity-preserver"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
 <div id ="titdiv">
 
@@ -206,12 +197,12 @@ $(document).ready(function(){
 {% endwith %}
 </div>
 
-{% if render_format == "recent" and g.user.username is not defined %}
-<div id="banner">
-  <div style="float:right;cursor:pointer;" id="xbanner">X</div>
-  New to arxiv-sanity? Check out the <a href="https://youtu.be/S2GY3gh6qC8" target="_blank">introduction video</a>.
-</div>
-{% endif %}
+<!-- {% if render_format == "recent" and g.user.username is not defined %} -->
+<!-- <div id="banner"> -->
+<!--   <div style="float:right;cursor:pointer;" id="xbanner">X</div> -->
+<!--   New to arxiv-sanity? Check out the <a href="https://youtu.be/S2GY3gh6qC8" target="_blank">introduction video</a>. -->
+<!-- </div> -->
+<!-- {% endif %} -->
 
 <div id="sbox">
   <form action="/search" method="get">
@@ -219,20 +210,6 @@ $(document).ready(function(){
   </form>
   <div id="search_hint"></div>
 </div>
-
-{% if show_prompt == "yes" %}
-<div id="prompt" style="background-color:#f6ff7a; padding:10px; width:980px; margin-left:auto; margin-right:auto; font-size:14px;">
-Hey there {{ g.user.username }}, sorry to interrupt. Arxiv-sanity costs a non-negligible amount of money to host.
-If you love the site, please consider pitching in:
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="display:inline-block;">
-  <input type="hidden" name="cmd" value="_s-xclick">
-  <input type="hidden" name="hosted_button_id" value="DRW9PQ2J3U3RJ">
-  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" style="display:inline-block;height:14px;">
-  <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-  </form>
-To nuke this message away for a long time click <span id="goaway" style="text-decoration: underline;cursor: pointer;">here</span>.
-</div>
-{% endif %}
 
 <div id="pagebar">
   <div class="pagelink" id="tabrecent"><a href="/">most recent</a></div>
